static/style.css: ensure scrollbar

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@
 
 body {
     max-width: 50ch;
+    min-height: 101vh;          /*always show scrollbar*/
 
     line-height: 1.5;
 
